# justsha1

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  sha1.cpp
src/include/justsha1/: sha1.h
test/: CMakeLists.txt  test.cpp
